<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/menubg1"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="drucc.sittichok.heyheybread.MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="false"
        android:orientation="horizontal"
        android:padding="20dp">

        <TextView
            android:id="@+id/textView61"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/setname"
            android:textSize="@dimen/h1"
            tools:ignore="InefficientWeight" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="#82ffffff"
        android:orientation="vertical"
        android:padding="20dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="@dimen/icon"
            android:layout_height="@dimen/icon"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/bread1"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:text="@string/tell"
            android:textColor="#0b0a0a"
            android:textSize="20dp"
            tools:ignore="SpUsage" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="@dimen/edittext"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:hint="@string/c4"
            android:inputType="text"
            android:textColor="#050505" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="@dimen/edittext"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:hint="@string/c5"
            android:inputType="textPassword"
            android:textColor="#0b0a0a" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="clickLogin"
            android:text="@string/c3"
            android:textSize="20dp"
            tools:ignore="ButtonStyle,SpUsage" />

        <Button
            android:id="@+id/button2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="clickNewRegister"
            android:text="@string/c2"
            android:textSize="20dp"
            tools:ignore="ButtonStyle,SpUsage" />
    </LinearLayout>
</RelativeLayout>
