<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="drucc.sittichok.heyheybread.ConfirmOrderActivity"
    android:background="@drawable/menubg1">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/LinButton"
        android:background="#96ffffff">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="15dp"
            android:layout_above="@+id/textView23">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/d4"
                android:id="@+id/textView18"
                android:textIsSelectable="false"
                android:textSize="25dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="New Text"
                    android:id="@+id/textView30"
                    android:layout_weight="0.5"
                    android:layout_marginLeft="10dp"
                    android:textSize="16dp"
                    android:layout_marginBottom="5dp" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView19"
                android:textSize="16dp"
                android:text="New Text"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="New Text"
                android:id="@+id/textView20"
                android:layout_marginLeft="10dp"
                android:textSize="16dp"
                android:layout_marginBottom="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="New Text"
                android:id="@+id/textView21"
                android:textSize="16dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="5dp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/d6"
                    android:id="@+id/textView32"
                    android:textSize="@dimen/h3"
                    android:layout_weight="0"
                    android:layout_marginLeft="11dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/b2"
                    android:id="@+id/textView31"
                    android:textSize="@dimen/h3"
                    android:layout_weight="0"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/b3"
                    android:id="@+id/textView34"
                    android:textSize="@dimen/h3"
                    android:layout_weight="0"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="20dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/b4"
                    android:id="@+id/textView33"
                    android:textSize="@dimen/h3"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/b5"
                    android:id="@+id/textView36"
                    android:textSize="@dimen/h3"
                    android:layout_weight="0"
                    android:layout_marginTop="10dp" />
            </LinearLayout>

            <ListView
                android:layout_width="match_parent"
                android:id="@+id/listView2"
                android:padding="15dp"
                android:layout_height="300dp" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/e1"
                android:id="@+id/textView29"
                android:textSize="@dimen/h2"
                android:layout_alignParentRight="false"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentEnd="false"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_weight="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="New Text"
                android:id="@+id/textView23"
                android:textSize="@dimen/h2"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="20dp"
                android:layout_weight="1"
                android:layout_marginTop="20dp" />

            <TextView
                android:text="@string/d2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView8"
                android:layout_weight="1"
                android:textSize="@dimen/h2"
                android:layout_marginTop="20dp" />

        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/LinButton"
        android:layout_alignParentBottom="true">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="clickMore"
            android:text="@string/a44"
            android:id="@+id/button6"
            android:layout_weight="2"
            android:textSize="20dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="clickFinish"
            android:text="@string/a55"
            android:id="@+id/button7"
            android:layout_weight="1"
            android:textSize="20dp" />
    </LinearLayout>

</RelativeLayout>
